--- a/templates/destination.html
+++ b/templates/destination.html
@@ -41,9 +41,11 @@
         </div><!-- .row -->
         
 <!-- START PACKAGES ROW 1----------------- -->
-        <div class="row col-padding-sm-view jrow-centered" style="display:{titlecss1};">
-            <div class="col-sm-4 white jcol-centered">
-                <img {src1package}="../images/package1.jpg" class="img-responsive pthumbnail" style="display: {package1imageCSS}">
+        <div class="row col-padding-sm-view jrow-centered">
+            <div class="col-sm-4 white jcol-centered" style="{titlecss1};">
+                <div class="pthumbnail" style="display: {package1imageCSS}">
+                    <img {src1package}="../images/package1.jpg" class="img-responsive">
+                </div>
                 <h4>{title1_c}</h4>
                 <p>
                 <span class="price" style="display:{price1css}">{package_1_price}{pricing_type_1}</span>
@@ -53,8 +55,10 @@
                 {package1_c}</p>
             </div>
             
-            <div class="col-sm-4 white jcol-centered" style="display:{titlecss2};">
-                <img {src2package}="../images/package2.jpg" class="img-responsive pthumbnail" style="display: {package2imageCSS}">
+            <div class="col-sm-4 white jcol-centered" style="{titlecss2};">
+                <div class="pthumbnail" style="display: {package2imageCSS}">
+                    <img {src2package}="../images/package2.jpg" class="img-responsive">
+                </div>
                 <h4>{title2_c}</h4>
                 <p>
                 <span class="price" style="display:{price2css}">{package_2_price}{pricing_type_2}</span>
@@ -64,8 +68,10 @@
                 {package2_c}</p>
             </div>
             
-            <div class="col-sm-4 white jcol-centered" style="display:{titlecss3};">
-                <img {src3package}="../images/package1.jpg" class="img-responsive pthumbnail" style="display: {package3imageCSS}">
+            <div class="col-sm-4 white jcol-centered" style="{titlecss3};">
+                <div class="pthumbnail" style="display: {package3imageCSS}">
+                    <img {src3package}="../images/package3.jpg" class="img-responsive">
+                </div>
                 <h4>{title3_c}</h4>
                 <p>
                 <span class="price" style="display:{price3css}">{package_3_price}{pricing_type_3}</span>
@@ -77,9 +83,11 @@
         </div><!-- .row first package row -->
         
 <!-- START PACKAGES ROW 2----------------- -->
-        <div class="row col-padding-sm-view jrow-centered" style="display:{titlecss4};">
-            <div class="col-sm-4 white jcol-centered" style="display:{titlecss4};">
-                <img {src4package}="../images/package4.jpg" class="img-responsive pthumbnail" style="display: {package4imageCSS}">
+        <div class="row col-padding-sm-view jrow-centered" style="{titlecss4};">
+            <div class="col-sm-4 white jcol-centered" style="{titlecss4};">
+                <div class="pthumbnail" style="display: {package4imageCSS}">
+                    <img {src4package}="../images/package4.jpg" class="img-responsive">
+                </div>
                 <h4>{title4_c}</h4>
                 <p>
                 <span class="price" style="display:{price4css}">{package_4_price}{pricing_type_4}</span>
@@ -89,8 +97,10 @@
                 {package4_c}</p>
             </div>
             
-            <div class="col-sm-4 white jcol-centered" style="display:{titlecss5};">
-                <img {src5package}="../images/package5.jpg" class="img-responsive pthumbnail" style="display: {package5imageCSS}">
+            <div class="col-sm-4 white jcol-centered" style="{titlecss5};">
+                <div class="pthumbnail" style="display: {package5imageCSS}">
+                    <img {src5package}="../images/package5.jpg" class="img-responsive">
+                </div>
                 <h4>{title5_c}</h4>
                 <p>
                 <span class="price" style="display:{price5css}">{package_5_price}{pricing_type_5}</span>
@@ -100,8 +110,10 @@
                 {package5_c}</p>
             </div>
             
-            <div class="col-sm-4 white jcol-centered" style="display:{titlecss6};">
-                <img {src6package}="../images/package6.jpg" class="img-responsive pthumbnail" style="display: {package6imageCSS}">
+            <div class="col-sm-4 white jcol-centered" style="{titlecss6};">
+                <div class="pthumbnail" style="display: {package6imageCSS}">
+                    <img {src6package}="../images/package6.jpg" class="img-responsive">
+                </div>
                 <h4>{title6_c}</h4>
                 <p>
                 <span class="price" style="display:{price6css}">{package_6_price}{pricing_type_6}</span>
@@ -144,7 +156,7 @@
                 <a href="https://travelzap.com/payments/?r={booking_number}" target="_blank"><button>Deposit</button></a>
             </div>
             
-            <div class="col-sm-4 booking-well jcol-centered" style="display:{insurancecss}">
+            <div class="col-sm-4 booking-well jcol-centered" style="{insurancecss}">
                 <span class="booking-number">3. Travel Insurance</span>
                 </br></br>
                 <p class="para-bottom2">This step is optional. Cancel for any reason travel insurance.</p>
