--- a/templates/landing.html
+++ b/templates/landing.html
@@ -8,7 +8,8 @@
     	    <div class="clearfix"></div>
 	    </div><!-- end row -->
 	    
-	    <div class="wedding-subtitle text-center">{wedding_title}</br> {wedding_date}</div>
+	    <div class="wedding-subtitle text-center">Wedding</br> {wedding_date}</div>
+	    <!--<div class="wedding-subtitle text-center">{wedding_title}</br> {wedding_date}</div>-->
     </div><!-- end container -->
 </section><!-- end hero -->
 
