--- a/templates/wedding.html
+++ b/templates/wedding.html
@@ -47,7 +47,7 @@
                 <p>{about_us}</p>
                 
                 <button data-toggle="modal" data-target="#rsvpModal">rsvp</button>
-                <button data-toggle="modal" data-target="#guestList" style="display:{guestlistCSS};">Guest List</button>
+                <!--<button data-toggle="modal" data-target="#guestList" style="display:{guestlistCSS};">Guest List</button>-->
             </div><!-- .col-sm-6 -->
         </div><!-- .row -->
     </div><!-- .container -->
@@ -202,7 +202,7 @@
 </section><!-- #maids-grooms -->
 
 <!-- INSTAGRAM # ====================================== -->
-<section id="registery" class="container-space text-center" style="display:{instagramCSS}">
+<section id="instagram" class="container-space text-center" style="display:{instagramCSS}">
     <h1>Share your photos with us</h1>
     <div class="container">
         <div class="row">
@@ -211,5 +211,5 @@
             </div><!-- .col-sm-6 -->
         </div><!-- .row -->
     </div><!-- .container -->
-</section><!-- #registery-->
+</section><!-- #instagram-->
 </div>
