--- a/templates/wedding.html
+++ b/templates/wedding.html
@@ -54,7 +54,7 @@
 </section><!-- #couple-story-->
 
 <!-- REGISTERY ====================================== -->
-<section id="registery" class="container-space text-center" style="display:{reg1css};">
+<section id="registery" class="container-space text-center" style="display:{registeryCss};">
     <h1>Registry</h1>
     <div class="container">
         <div class="row">
@@ -90,51 +90,139 @@
 <section id="maids-grooms" class="container-space" style="display: {bridesmaid1}">
     <h1 class="text-center"> Bridesmaids & Groomsmen</h1>
     <div class="container">
-        <div class="row bride-groom-sm-view">
-            <!-- bridesmaids column ------------------ -->
-            <div class="col-sm-6">
+        <div class="row bride-groom-sm-view match-my-cols">
+            <!-- bridesmaids1 column ------------------ -->
+            <div class="col-md-6">
                 <div class="row row-space" style="display: {bridesmaid1}">
-                    <div class="col-xs-6 jthumbnail">
-                        <img src="images/b1.jpg" alt="maids-grooms-pic">
+                    <div class="col-sm-5">
+                        <div class="jthumbnail">
+                            <img src="images/b1.jpg" alt="maids-grooms-pic">
+                        </div>
                     </div><!-- .col-sm-5 -->
-                    <div class="col-xs-7">
+                    <div class="col-sm-7">
                         <h4>{bridesmaid1_name}</h4>
                         <p>{bridesmaid1_description}</p>
                     </div><!-- .col-sm-7 -->
                 </div><!-- .row -->
-                
-                <div class="row row-space" style="display: {bridesmaid2}">
-                    <div class="col-xs-5 jthumbnail">
-                        <img src="images/b2.jpg" alt="maids-grooms-pic">
+            </div>  <!-- .col-sm-6 -->
+            
+            <!-- groomsman1 column ------------------ -->
+            <div class="col-md-6">
+                <div class="row row-space" style="display: {groomsman1}">
+                    <div class="col-sm-5">
+                        <div class="jthumbnail">
+                            <img src="images/g1.jpg" alt="maids-grooms-pic">
+                        </div>
                     </div><!-- .col-sm-5 -->
-                    <div class="col-xs-7">
+                    <div class="col-sm-7">
+                        <h4>{groomsman1_name}</h4>
+                        <p>{groomsman1_description}</p>
+                    </div><!-- .col-sm-7 -->
+                </div><!-- .row -->
+            </div><!-- .col-sm-6 -->
+        </div><!-- .row -->
+        
+        <div class="row bride-groom-sm-view match-my-cols">
+            <!-- bridesmaids2 column ------------------ -->
+            <div class="col-md-6">
+                <div class="row row-space" style="display: {bridesmaid2}">
+                    <div class="col-sm-5">
+                        <div class="jthumbnail">
+                            <img src="images/b2.jpg" alt="maids-grooms-pic">
+                        </div>
+                    </div><!-- .col-sm-5 -->
+                    <div class="col-sm-7">
                         <h4>{bridesmaid2_name}</h4>
                         <p>{bridesmaid2_description}</p>
                     </div><!-- .col-sm-7 -->
                 </div><!-- .row -->
-                
-                <div class="row row-space" style="display: {bridesmaid3}">
-                    <div class="col-xs-5 jthumbnail">
-                        <img src="images/b3.jpg" alt="maids-grooms-pic">
+            </div>  <!-- .col-sm-6 -->
+            
+            <!-- groomsman2 column ------------------ -->
+            <div class="col-md-6">
+                <div class="row row-space" style="display: {groomsman2}">
+                    <div class="col-sm-5">
+                        <div class="jthumbnail">
+                            <img src="images/g2.jpg" alt="maids-grooms-pic">
+                        </div>
                     </div><!-- .col-sm-5 -->
-                    <div class="col-xs-7">
+                    <div class="col-sm-7">
+                        <h4>{groomsman2_name}</h4>
+                        <p>{groomsman2_description}</p>
+                    </div><!-- .col-sm-7 -->
+                </div><!-- .row -->
+            </div><!-- .col-sm-6 -->
+        </div><!-- .row -->
+        
+        <div class="row bride-groom-sm-view match-my-cols">
+            <!-- bridesmaids3 column ------------------ -->
+            <div class="col-md-6">
+                <div class="row row-space" style="display: {bridesmaid3}">
+                    <div class="col-sm-5">
+                        <div class="jthumbnail">
+                            <img src="images/b3.jpg" alt="maids-grooms-pic">
+                        </div>
+                    </div><!-- .col-sm-5 -->
+                    <div class="col-sm-7">
                         <h4>{bridesmaid3_name}</h4>
                         <p>{bridesmaid3_description}</p>
                     </div><!-- .col-sm-7 -->
                 </div><!-- .row -->
-                
-                <div class="row row-space" style="display: {bridesmaid4}">
-                    <div class="col-xs-5 jthumbnail">
-                        <img src="images/b4.jpg" alt="maids-grooms-pic">
+            </div>  <!-- .col-sm-6 -->
+            
+            <!-- groomsman3 column ------------------ -->
+            <div class="col-md-6">
+                <div class="row row-space" style="display: {groomsman3}">
+                    <div class="col-sm-5">
+                        <div class="jthumbnail">
+                            <img src="images/g3.jpg" alt="maids-grooms-pic">
+                        </div>
                     </div><!-- .col-sm-5 -->
-                    <div class="col-xs-7">
+                    <div class="col-sm-7">
+                        <h4>{groomsman3_name}</h4>
+                        <p>{groomsman3_description}</p>
+                    </div><!-- .col-sm-7 -->
+                </div><!-- .row -->
+            </div><!-- .col-sm-6 -->
+        </div><!-- .row -->
+        
+        <div class="row bride-groom-sm-view match-my-cols">
+            <!-- bridesmaids4 column ------------------ -->
+            <div class="col-md-6">
+                <div class="row row-space" style="display: {bridesmaid4}">
+                    <div class="col-sm-5">
+                        <div class="jthumbnail">
+                            <img src="images/b4.jpg" alt="maids-grooms-pic">
+                        </div>
+                    </div><!-- .col-sm-5 -->
+                    <div class="col-sm-7">
                         <h4>{bridesmaid4_name}</h4>
                         <p>{bridesmaid4_description}</p>
                     </div><!-- .col-sm-7 -->
                 </div><!-- .row -->
-                
+            </div>  <!-- .col-sm-6 -->
+            
+            <!-- groomsman4 column ------------------ -->
+            <div class="col-md-6">
+                <div class="row row-space" style="display: {groomsman4}">
+                    <div class="col-sm-5">
+                        <div class="jthumbnail">
+                            <img src="images/g4.jpg" alt="maids-grooms-pic">
+                        </div>
+                    </div><!-- .col-sm-5 -->
+                    <div class="col-sm-7">
+                        <h4>{groomsman4_name}</h4>
+                        <p>{groomsman4_description}</p>
+                    </div><!-- .col-sm-7 -->
+                </div><!-- .row -->
+            </div><!-- .col-sm-6 -->
+        </div><!-- .row -->
+        
+        <div class="row bride-groom-sm-view match-my-cols">
+            <!-- bridesmaids5 column ------------------ -->
+            <div class="col-md-6">
                 <div class="row row-space" style="display: {bridesmaid5}">
-                    <div class="col-xs-5 jthumbnail">
+                    <div class="col-xs-6 jthumbnail">
                         <img src="images/b5.jpg" alt="maids-grooms-pic">
                     </div><!-- .col-sm-5 -->
                     <div class="col-xs-7">
@@ -142,60 +230,21 @@
                         <p>{bridesmaid5_description}</p>
                     </div><!-- .col-sm-7 -->
                 </div><!-- .row -->
-            </div><!-- .col-sm-6 -->
+            </div>  <!-- .col-sm-6 -->
             
-            <!-- groomsmen column ------------------ -->
-            <div class="col-sm-6">
-                <div class="row row-space" style="display: {groomsman1}">
-                    <div class="col-xs-5 jthumbnail">
-                        <img src="images/g1.jpg" alt="maids-grooms-pic">
-                    </div><!-- .col-sm-5 -->
-                    <div class="col-xs-7">
-                        <h4>{groomsman1_name}</h4>
-                        <p>{groomsman1_description}</p>
-                    </div><!-- .col-sm-7 -->
-                </div><!-- .row -->
-                
-                <div class="row row-space" style="display: {groomsman2}">
-                    <div class="col-xs-5 jthumbnail">
-                        <img src="images/g2.jpg" alt="maids-grooms-pic">
-                    </div><!-- .col-sm-5 -->
-                    <div class="col-xs-7">
-                        <h4>{groomsman2_name}</h4>
-                        <p>{groomsman2_description}</p>
-                    </div><!-- .col-sm-7 -->
-                </div><!-- .row -->
-                
-                <div class="row row-space" style="display: {groomsman3}">
-                    <div class="col-xs-5 jthumbnail">
-                        <img src="images/g3.jpg" alt="maids-grooms-pic">
-                    </div><!-- .col-sm-5 -->
-                    <div class="col-xs-7">
-                        <h4>{groomsman3_name}</h4>
-                        <p>{groomsman3_description}</p>
-                    </div><!-- .col-sm-7 -->
-                </div><!-- .row -->
-                
-                <div class="row row-space" style="display: {groomsman4}">
-                    <div class="col-xs-5 jthumbnail">
-                        <img src="images/g4.jpg" alt="maids-grooms-pic">
-                    </div><!-- .col-sm-5 -->
-                    <div class="col-xs-7">
-                        <h4>{groomsman4_name}</h4>
-                        <p>{groomsman4_description}</p>
-                    </div><!-- .col-sm-7 -->
-                </div><!-- .row -->
-                
+            <!-- groomsman5 column ------------------ -->
+            <div class="col-md-6">
                 <div class="row row-space" style="display: {groomsman5}">
-                    <div class="col-xs-5 jthumbnail">
-                        <img src="images/g5.jpg" alt="maids-grooms-pic">
+                    <div class="col-xs-5">
+                        <div class="jthumbnail">
+                            <img src="images/g5.jpg" alt="maids-grooms-pic">
+                        </div>
                     </div><!-- .col-sm-5 -->
                     <div class="col-xs-7">
                         <h4>{groomsman5_name}</h4>
                         <p>{groomsman5_description}</p>
                     </div><!-- .col-sm-7 -->
                 </div><!-- .row -->
-                
             </div><!-- .col-sm-6 -->
         </div><!-- .row -->
     </div><!-- .container -->
