--- a/style/main.scss
+++ b/style/main.scss
@@ -76,6 +76,10 @@ button {
     }
 }
 
+button:focus {
+    outline: 0;
+}
+
 .bold {
     font-weight: bold;
 }
@@ -202,8 +206,17 @@ ul {
     padding: 30px;  
 }
 
+.sample-info-pic-wedding img {
+    max-width: 100%;
+    width: auto;
+    height: auto;
+    max-height: 400px;
+    outline: 1px solid $main-color;
+    outline-offset: -20px;
+}
+
 .sample-info-pic img {
-    width: 100%;
+    max-width: 100%;
     height: auto;
     outline: 1px solid $main-color;
     outline-offset: -20px;
@@ -688,8 +701,6 @@ iframe {
     width: 300px;
     height: 200px;
     overflow: hidden;
-    outline: 1px solid $main-color;
-    outline-offset: -20px;
 }
 
 .bthumbnail img {
@@ -701,6 +712,8 @@ iframe {
     -webkit-transform: translate(-50%,-50%);
     -ms-transform: translate(-50%,-50%);
     transform: translate(-50%,-50%);
+    outline: 1px solid $main-color;
+    outline-offset: -20px;
 }
 
 // ************************************* //
@@ -740,7 +753,6 @@ iframe {
   float: none;
   vertical-align: top;
   text-align: left;
-  padding-top: 15px;
 }
 
 .pthumbnail {
@@ -751,7 +763,6 @@ iframe {
 }
 
 .pthumbnail img {
-    margin-top: 15px;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -786,6 +797,10 @@ iframe {
 
 .para-bottom {
     margin-bottom: 57px;
+}
+
+.para-bottom3 {
+    margin-bottom: 37px;
 }
 
 .para-bottom2 {
@@ -899,7 +914,17 @@ iframe {
 
 @media screen and (max-width: 991px) {
     .para-bottom2 {
-        margin-bottom: 56px;
+        margin-bottom: 37px;
+    }
+    
+    .para-bottom3 {
+        margin-bottom: 37px;
+    }
+}
+
+@media (min-width: 992px) and (max-width: 1199px) {
+    .para-bottom3 {
+        margin-bottom: 20px;
     }
 }
 
