--- a/templates/destination.html
+++ b/templates/destination.html
@@ -4,15 +4,21 @@
         <h1 class="text-center">{hotel_c}</h1>
     	<h4 class="text-center">{destination_c}</h4>
         <div class="row destination-pics row-centered">
-    		<div class="col-sm-4 col-centered">
-    			<img src="assets/img/{hotel_c}1.jpg" class="img-responsive bthumbnail" />
-    		</div><!-- .col-sm-4 -->
-    		<div class="col-sm-4 col-centered">
-    			<img src="assets/img/{hotel_c}2.jpg" class="img-responsive bthumbnail" />
-    		</div><!-- .col-sm-4 -->
-    		<div class="col-sm-4 col-centered">
-    			<img src="assets/img/{hotel_c}3.jpg" class="img-responsive bthumbnail" />
-    		</div><!-- .col-sm-4 -->
+    		<div class="col-md-4 col-centered">
+    		    <div class="bthumbnail">
+    			    <img src="assets/img/{hotel_c}1.jpg" class="img-responsive" />
+    			</div>
+    		</div><!-- .col-md-4 -->
+    		<div class="col-md-4 col-centered">
+    		    <div class="bthumbnail">
+    			    <img src="assets/img/{hotel_c}2.jpg" class="img-responsive" />
+    			</div>
+    		</div><!-- .col-md-4 -->
+    		<div class="col-md-4 col-centered">
+    		    <div class="bthumbnail">
+    			    <img src="assets/img/{hotel_c}3.jpg" class="img-responsive" />
+    			</div>
+    		</div><!-- .col-md-4 -->
     	</div><!-- .row -->
     	
     	<div class="row container-space">
@@ -149,11 +155,18 @@
                 <a href="http://travelzap.com/rooming/?r={booking_number}" target="_blank"><button>Rooming Form</button></a>
             </div>
             
-            <div class="col-sm-4 booking-well jcol-centered">
+            <div class="col-sm-4 booking-well jcol-centered" style="{depositCss}">
                 <span class="booking-number">2. Deposit</span>
                 </br></br>
                 <p class="para-bottom">Submit your ${deposits_person} deposit Per Person.</p>
                 <a href="https://travelzap.com/payments/?r={booking_number}" target="_blank"><button>Deposit</button></a>
+            </div>
+            
+            <div class="col-sm-4 booking-well jcol-centered" style="{payment_nodepositCss}">
+                <span class="booking-number">2. Payment</span>
+                </br></br>
+                <p class="para-bottom3">Make a payment or set up a payment plan. <strong>Final Payments due {final_payment_due}. </strong></p>
+                <a href="https://travelzap.com/payments/?r={booking_number}" target="_blank"><button>Payment</button></a>
             </div>
             
             <div class="col-sm-4 booking-well jcol-centered" style="{insurancecss}">
@@ -167,7 +180,7 @@
 </section>
 
 <!-- PAYMENT ====================================== -->
-<section id="payment">
+<section id="payment" style="display:{paymentCss};">
     <div class="container container-space text-center">
         <h1>Payment</h1>
         <div class="row col-padding-sm-view">
