--- a/style/main.css
+++ b/style/main.css
@@ -1027,12 +1027,13 @@ iframe {
   display: table-cell;
   float: none;
   vertical-align: top;
-  text-align: left; }
+  text-align: left;
+  padding-top: 15px; }
 
 .pthumbnail {
   position: relative;
   width: 100%;
-  height: 200px;
+  height: 250px;
   overflow: hidden; }
 
 .pthumbnail img {
