--- a/style/main.scss
+++ b/style/main.scss
@@ -753,12 +753,13 @@ iframe {
   float: none;
   vertical-align: top;
   text-align: left;
+  padding-top: 15px;
 }
 
 .pthumbnail {
     position: relative;
     width: 100%;
-    height: 200px;
+    height: 250px;
     overflow: hidden;
 }
 
