--- a/templates/wedding.html
+++ b/templates/wedding.html
@@ -222,10 +222,12 @@
             <!-- bridesmaids5 column ------------------ -->
             <div class="col-md-6">
                 <div class="row row-space" style="display: {bridesmaid5}">
-                    <div class="col-xs-6 jthumbnail">
-                        <img src="images/b5.jpg" alt="maids-grooms-pic">
+                    <div class="col-sm-5">
+                        <div class="jthumbnail">
+                            <img src="images/b5.jpg" alt="maids-grooms-pic">
+                        </div>
                     </div><!-- .col-sm-5 -->
-                    <div class="col-xs-7">
+                    <div class="col-sm-7">
                         <h4>{bridesmaid5_name}</h4>
                         <p>{bridesmaid5_description}</p>
                     </div><!-- .col-sm-7 -->
@@ -235,12 +237,12 @@
             <!-- groomsman5 column ------------------ -->
             <div class="col-md-6">
                 <div class="row row-space" style="display: {groomsman5}">
-                    <div class="col-xs-5">
+                    <div class="col-sm-5">
                         <div class="jthumbnail">
                             <img src="images/g5.jpg" alt="maids-grooms-pic">
                         </div>
                     </div><!-- .col-sm-5 -->
-                    <div class="col-xs-7">
+                    <div class="col-sm-7">
                         <h4>{groomsman5_name}</h4>
                         <p>{groomsman5_description}</p>
                     </div><!-- .col-sm-7 -->
