--- a/templates/contact.html
+++ b/templates/contact.html
@@ -8,7 +8,7 @@
 	                    <li>{full_name_user}</li>
 	                    <li>Phone: <a href="tel:{phone_work_user}">{phone_work_user}</a></li>
 	                    <li>Text: <a href="sms:{phone_mobile_user}">{phone_mobile_user}</a></li>
-	                    <li><a href="mailto:{assigned_user_email}">{assigned_user_email}</a></li>
+	                    <li>Email: <a href="mailto:{assigned_user_email}">{assigned_user_email}</a></li>
 	                </ul>
 	                
 	                </br>
