--- a/templates/destination.html
+++ b/templates/destination.html
@@ -31,8 +31,8 @@
 </section>
 
 <!-- PACKAGE INFORMATION ====================================== -->
-<section id="packages">
-    <div class="container container-space">
+<section id="packages" class="container-space">
+    <div class="container">
         <div class="row col-padding-sm-view">
             <h1 class="text-center">Package information</h1>
             <div class="col-sm-8 col-sm-offset-2">
@@ -47,7 +47,7 @@
         </div><!-- .row -->
         
 <!-- START PACKAGES ROW 1----------------- -->
-        <div class="row col-padding-sm-view jrow-centered">
+        <div class="row jrow-centered">
             <div class="col-sm-4 white jcol-centered" style="{titlecss1};">
                 <div class="pthumbnail" style="display: {package1imageCSS}">
                     <img {src1package}="../images/package1.jpg" class="img-responsive">
@@ -87,9 +87,11 @@
                 {package3_c}</p>
             </div>
         </div><!-- .row first package row -->
-        
-<!-- START PACKAGES ROW 2----------------- -->
-        <div class="row col-padding-sm-view jrow-centered" style="{titlecss4};">
+    </div><!-- .container first package row --> 
+    
+<!-- START PACKAGES ROW 2----------------- -->    
+    <div class="container">
+        <div class="row jrow-centered" style="{titlecss4};">
             <div class="col-sm-4 white jcol-centered" style="{titlecss4};">
                 <div class="pthumbnail" style="display: {package4imageCSS}">
                     <img {src4package}="../images/package4.jpg" class="img-responsive">
@@ -128,13 +130,13 @@
                 </br></br>
                 {package6_c}</p>
             </div>
-        </div><!-- .row first package row -->
-    </div><!-- .container -->
+        </div><!-- .row second package row -->
+    </div><!-- .container second package row -->
 </section>
 
 <!-- BOOKING INFORMATION ====================================== -->
 <section id="booking">
-    <div class="container container-space">
+    <div class="container second-package-space">
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2 text-center">
                 <h1>booking</h1>
