--- a/templates/destination.html
+++ b/templates/destination.html
@@ -136,7 +136,7 @@
 
 <!-- BOOKING INFORMATION ====================================== -->
 <section id="booking">
-    <div class="container second-package-space">
+    <div class="container container-space">
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2 text-center">
                 <h1>booking</h1>
