--- a/style/main.css
+++ b/style/main.css
@@ -1074,7 +1074,8 @@ iframe {
 
 @media (min-width: 769px) and (max-width: 1012px) {
   #hero {
-    padding-top: 120px; }
+    padding-top: 120px;
+    height: 500px; }
 
   .couple-name {
     font-size: 50px; }
@@ -1115,6 +1116,9 @@ iframe {
 
   .sample-info-text {
     padding: 0 15px; }
+
+  footer {
+    padding-bottom: 80px; }
 
   .footer-nav {
     display: none; }
@@ -1158,5 +1162,8 @@ iframe {
 @media (min-width: 1025px) {
   #fixed-footer-sm {
     display: none !important; } }
+@media screen and (max-width: 360px) {
+  .pthumbnail {
+    height: 200px; } }
 
 /*# sourceMappingURL=main.css.map */
