--- a/templates/contact.html
+++ b/templates/contact.html
@@ -70,10 +70,13 @@
 	                
 	                <div class="row promo">
 	                	<div class="col-sm-6">
-        				 <p><span class="gold">Get $150 off </span>for your next group vacation. 
-	        				 Discount code #{discount_code}. </br></br> Please reach out to us 
-	        				 <a href="http://travelzap.com/group-vacation-quote" target="_blank">here.</a>
-        				 </p>
+        				 <div style="display: {no_discountCss}">
+	        				 <p>Planning your next group vacation?</br> Please reach out to us <a href="http://travelzap.com/group-vacation-quote" target="_blank">here.</a></p>
+	        			</div>
+        			
+	        			<div style="display: {discountCss}">
+	        				 <p><span class="gold">$150 off</span> for your next group vacation. Discount code #{discount_code}. </br> Please reach out to us <a href="http://travelzap.com/group-vacation-quote" target="_blank">here.</a></p>
+	        			</div>
         			</div>
 	                	
 	                	<div class="col-sm-6 col-xs-8 text-center">
