--- a/templates/destination.html
+++ b/templates/destination.html
@@ -59,6 +59,7 @@
                 <a href="#/destination#booking" class="scroll-to"><button>book now!</button></a>
                 </br></br>
                 {package1_c}</p>
+                <div style="opacity: 0; font-size: 14px;">this div makes the table cell 100% so it displays full width at all times</div>
             </div>
             
             <div class="col-sm-4 white jcol-centered" style="{titlecss2};">
@@ -72,6 +73,7 @@
                 <a href="#/destination#booking" class="scroll-to"><button>book now!</button></a>
                 </br></br>
                 {package2_c}</p>
+                <div style="opacity: 0; font-size: 14px;">this div makes the table cell 100% so it displays full width at all times</div>
             </div>
             
             <div class="col-sm-4 white jcol-centered" style="{titlecss3};">
@@ -85,6 +87,7 @@
                 <a href="#/destination#booking" class="scroll-to"><button>book now!</button></a>
                 </br></br>
                 {package3_c}</p>
+                <div style="opacity: 0; font-size: 14px;">this div makes the table cell 100% so it displays full width at all times</div>
             </div>
         </div><!-- .row first package row -->
     </div><!-- .container first package row --> 
@@ -103,6 +106,7 @@
                 <a href="#/destination#booking" class="scroll-to"><button>book now!</button></a>
                 </br></br>
                 {package4_c}</p>
+                <div style="opacity: 0; font-size: 14px;">this div makes the table cell 100% so it displays full width at all times</div>
             </div>
             
             <div class="col-sm-4 white jcol-centered" style="{titlecss5};">
@@ -116,6 +120,7 @@
                 <a href="#/destination#booking" class="scroll-to"><button>book now!</button></a>
                 </br></br>
                 {package5_c}</p>
+                <div style="opacity: 0; font-size: 14px;">this div makes the table cell 100% so it displays full width at all times</div>
             </div>
             
             <div class="col-sm-4 white jcol-centered" style="{titlecss6};">
@@ -129,6 +134,7 @@
                 <a href="#/destination#booking" class="scroll-to"><button>book now!</button></a>
                 </br></br>
                 {package6_c}</p>
+                <div style="opacity: 0; font-size: 14px;">this div makes the table cell 100% so it displays full width at all times</div>
             </div>
         </div><!-- .row second package row -->
     </div><!-- .container second package row -->
