--- a/style/main.scss
+++ b/style/main.scss
@@ -138,7 +138,7 @@ ul {
 // ************************************* //
 // 3.0 Hero ========= //
 #hero {
-    background: url("../assets/img/{background_image}") center no-repeat;
+    background: url("../assets/img/<background_image>") center no-repeat;
     background-size: cover;
     width: 100%;
     height: 700px;
