--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,16 +1,18 @@
 <!-- HERO ====================================== -->
 <section id="hero">
-    <div class="container">
-	    <div class="row">
-    	    <div class="couple-name-one couple-name col-sm-5 text-right">{bride_first_name}</div>
-    	    <div class="couple-name-and couple-name col-sm-2 text-center">&amp;</div>
-    	    <div class="couple-name-two couple-name col-sm-5 text-left">{groom_first_name}</div>
-    	    <div class="clearfix"></div>
-	    </div><!-- end row -->
-	    
-	    <div class="wedding-subtitle text-center">Wedding</br> {wedding_date}</div>
-	    <!--<div class="wedding-subtitle text-center">{wedding_title}</br> {wedding_date}</div>-->
-    </div><!-- end container -->
+    <div class="names">
+        <div class="container">
+    	    <div class="row">
+        	    <div class="couple-name-one couple-name col-sm-5 text-right">{bride_first_name}</div>
+        	    <div class="couple-name-and couple-name col-sm-2 text-center">&amp;</div>
+        	    <div class="couple-name-two couple-name col-sm-5 text-left">{groom_first_name}</div>
+        	    <div class="clearfix"></div>
+    	    </div><!-- end row -->
+    	    
+    	    <div class="wedding-subtitle text-center">Wedding</br> {wedding_date}</div>
+    	    <!--<div class="wedding-subtitle text-center">{wedding_title}</br> {wedding_date}</div>-->
+        </div><!-- end container -->
+    </div>
 </section><!-- end hero -->
 
 <!-- COUNT DOWN ====================================== -->
