--- a/style/main.css
+++ b/style/main.css
@@ -549,12 +549,17 @@ ul {
   margin-right: -4px; }
 
 #hero {
-  background: url("../assets/img/{background_image}") center no-repeat;
+  background: url("../assets/img/<background_image>") center no-repeat;
   background-size: cover;
   width: 100%;
   height: 700px;
   font-family: 'Josefin Sans', Arial, sans-serif;
-  color: #b9874c;
+  color: #b9874c; }
+
+.names {
+  background-color: rgba(255, 255, 255, 0.4);
+  width: 100%;
+  min-height: 100%;
   padding-top: 220px; }
 
 .couple-name {
@@ -1074,8 +1079,10 @@ iframe {
 
 @media (min-width: 769px) and (max-width: 1012px) {
   #hero {
-    padding-top: 120px;
     height: 500px; }
+
+  .names {
+    padding-top: 120px; }
 
   .couple-name {
     font-size: 50px; }
@@ -1087,8 +1094,10 @@ iframe {
     padding: 0px 60px 0; } }
 @media screen and (max-width: 768px) {
   #hero {
-    padding-top: 120px;
     height: 500px; }
+
+  .names {
+    padding-top: 120px; }
 
   .couple-name {
     font-size: 50px;
