--- a/style/main.css
+++ b/style/main.css
@@ -554,7 +554,8 @@ ul {
   width: 100%;
   height: 700px;
   font-family: 'Josefin Sans', Arial, sans-serif;
-  color: #b9874c; }
+  color: #b9874c;
+  padding-top: 220px; }
 
 .couple-name {
   font-family: 'Playfair Display SC', serif;
@@ -1063,10 +1064,8 @@ iframe {
 
 @media (min-width: 769px) and (max-width: 1012px) {
   #hero {
+    padding-top: 120px;
     height: 500px; }
-
-  .names {
-    padding-top: 120px; }
 
   .couple-name {
     font-size: 50px; }
@@ -1078,10 +1077,8 @@ iframe {
     padding: 0px 60px 0; } }
 @media screen and (max-width: 768px) {
   #hero {
+    padding-top: 120px;
     height: 500px; }
-
-  .names {
-    padding-top: 120px; }
 
   .couple-name {
     font-size: 50px;
