--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,5 +1,6 @@
 <!-- HERO ====================================== -->
 <section id="hero">
+    <div class="names">
         <div class="container">
     	    <div class="row">
         	    <div class="couple-name-one couple-name col-sm-5 text-right">{bride_first_name}</div>
@@ -11,6 +12,7 @@
     	    <div class="wedding-subtitle text-center">Wedding</br> {wedding_date}</div>
     	    <!--<div class="wedding-subtitle text-center">{wedding_title}</br> {wedding_date}</div>-->
         </div><!-- end container -->
+    </div>
 </section><!-- end hero -->
 
 <!-- COUNT DOWN ====================================== -->
