--- a/style/main.css
+++ b/style/main.css
@@ -480,6 +480,9 @@ body {
 b, strong {
   -webkit-font-smoothing: antialiased; }
 
+.visible-div {
+  background-color: red; }
+
 h1, h2, h3 {
   font-family: 'Josefin Sans', Arial, sans-serif;
   color: #b9874c;
@@ -1033,8 +1036,18 @@ iframe {
 .pthumbnail {
   position: relative;
   width: 100%;
-  height: 250px;
+  height: 140px;
   overflow: hidden; }
+
+.pthumbnail img {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  bottom: 0;
+  max-width: 370px;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%); }
 
 #packages .price {
   font-size: 20px;
@@ -1154,6 +1167,6 @@ iframe {
     display: none !important; } }
 @media screen and (max-width: 360px) {
   .pthumbnail {
-    height: 200px; } }
+    height: 120px; } }
 
 /*# sourceMappingURL=main.css.map */
