--- a/style/main.scss
+++ b/style/main.scss
@@ -48,6 +48,10 @@ b, strong {
     -webkit-font-smoothing: antialiased;
 }
 
+.visible-div {
+    background-color: red;
+}
+
 // ************************************* //
 // 2.0 Global========= //
 h1, h2, h3 {
@@ -757,10 +761,21 @@ iframe {
 }
 
 .pthumbnail {
-    position: relative;
-    width: 100%;
-    height: 250px;
-    overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 140px;
+  overflow: hidden;
+}
+
+.pthumbnail img {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  bottom: 0;
+  max-width: 370px;
+  -webkit-transform: translate(-50%,-50%);
+      -ms-transform: translate(-50%,-50%);
+          transform: translate(-50%,-50%);
 }
 
 #packages {
@@ -937,6 +952,6 @@ iframe {
 
 @media screen and (max-width: 360px) {
     .pthumbnail {
-        height: 200px;
+        height: 120px;
     }
 }
