--- a/style/main.css
+++ b/style/main.css
@@ -483,6 +483,9 @@ b, strong {
 .visible-div {
   background-color: red; }
 
+.colored-div {
+  background-color: #f6f6f6; }
+
 h1, h2, h3 {
   font-family: 'Josefin Sans', Arial, sans-serif;
   color: #b9874c;
