--- a/style/main.scss
+++ b/style/main.scss
@@ -52,6 +52,10 @@ b, strong {
     background-color: red;
 }
 
+.colored-div {
+    background-color: #f6f6f6;
+}
+
 // ************************************* //
 // 2.0 Global========= //
 h1, h2, h3 {
